--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -9,7 +9,7 @@ $Light-grayish-cyan: hsl(185, 41%, 84%);
 $Very-light-grayish-cyan: hsl(189, 41%, 97%);
 $White: hsl(0, 0%, 100%);
 
-$font-inputs: 24px;
+$size-inputs: 24px;
 $font-family: 'Inter', sans-serif;
 $weights: 700;
 
